<resources>
    <string name="app_name">F21G1_CalorieCalculator</string>
    <string name="txtViewTitleText">Calorie Calculator</string>
    <string name="textViewWelcomeText">Welcome to use our APP</string>
    <string name="btnSignUpText">Sign Up</string>
    <string name="btnLogInText">Log In</string>
    <string name="editTextNameHint">User name</string>
    <string name="editTextPassHint">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="editTextRePassHint">Confirm Password</string>
    <string name="editTextAgeHint">Age</string>
    <string name="editTextHeightHint">Height (Inches)</string>
    <string name="editTextWeightHint">Weight (Lbs)</string>
    <string name="radioButtonMaleText">Male</string>
    <string name="radioButtonFemaleText">Female</string>
    <string name="btnSaveData">Save Data</string>
    <string name="txtNote">Note: </string>
    <string name="txtTDE">TDEE(cal): </string>
    <string name="txtCaloriesBurned">Calories Burned(cal): </string>
    <string name="txtCaloriesIntake">Calories Intake(cal): </string>
    <string name="txtSurplus">Surplus(cal): </string>
    <string name="txtGoFunctionMenu">Go Function Page</string>
    <string name="txtExerciseYouWant">Choose the exercise: </string>
    <string name="txtManuallyAddExerciseRecord">Manually add exercise records</string>

    <string name="mealname">Meal:</string>
    <string name="mealcal">Estimate Calories:</string>

    <string name="txtChooseExercise">Choose Exercise: </string>
    <string name="txtHowlong">How long did you work out (minutes)</string>
    <string name="txtGetResult">Display Total Calories</string>
    <string name="buttonSaveDatabaseText">Save To Database</string>
    <string-array name="ExerciseArray">
        <item> Walking</item>
        <item> jogging</item>
        <item> Biking</item>
    </string-array>

</resources>